major refactoring: Desktop uses SmartDocument in as header and footer

--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/Skins/ProcessPuzzle/Styles/Layout.css
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/Skins/ProcessPuzzle/Styles/Layout.css
@@ -79,6 +79,12 @@ body {
 	font-weight: bold;
 }
 
+#desktopTitleBar h3.currentUser {
+   font-size: 12px;
+   text-align: center;
+   color: #004080;
+}
+
 #desktopNavigationBar {
 	background: url(../Images/NavigationBarBackground.jpg) repeat-x;
 	height: 30px;
