Created content examples: Plain HTML, Static (smart) document, Dinamic Document, Document with Plugin.

--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
@@ -42,8 +42,10 @@ h2, h3, h4 {
 }
 
 h1 {
-	text-align: center;
 	color: teal;
+   padding-bottom: 10px;
+   padding-top: 10px;
+   text-align: center;
 }
 	
 h2 {
