--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/PhotoGalery.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/PhotoGalery.css
@@ -116,7 +116,7 @@ Notes:
 */
 
 .slideshow-controller {
-	background: url(Images/PhotoGaleryController.png) no-repeat; height: 48px; left: 50%; margin: -24px 0 0 -122px; overflow: hidden; position: absolute; top: 50%; width: 244px; z-index: 10000;
+	background: url(../Images/PhotoGaleryController.png) no-repeat; height: 48px; left: 50%; margin: -24px 0 0 -122px; overflow: hidden; position: absolute; top: 50%; width: 244px; z-index: 10000;
 }
 .slideshow-controller * {
 	margin: 0; outline: none; padding: 0;
@@ -128,7 +128,7 @@ Notes:
 	opacity: 1;
 }
 .slideshow-controller a {
-	background: url(Images/PhotoGaleryController-controls.png) no-repeat -47px 0; cursor: pointer; display: block; height: 18px; left: 112px; overflow: hidden; position: absolute; top: 15px; width: 20px;
+	background: url(../Images/PhotoGaleryController-controls.png) no-repeat -47px 0; cursor: pointer; display: block; height: 18px; left: 112px; overflow: hidden; position: absolute; top: 15px; width: 20px;
 }
 .slideshow-controller a.active {
 	background-position: -47px -18px;
@@ -176,7 +176,7 @@ Notes:
 */
 
 .slideshow-loader {
-	background: url(Images/PhotoGaleryLoader.png); height: 30px; right: 2px; position: absolute; top: 2px; width: 30px; z-index: 10001;
+	background: url(../Images/PhotoGaleryLoader.png); height: 30px; right: 2px; position: absolute; top: 2px; width: 30px; z-index: 10001;
 }
 .slideshow-loader-hidden {
 	opacity: 0;
