--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
@@ -36,6 +36,7 @@ body {
 	
 h2, h3, h4 {
    color: teal;
+   display: block;
 	margin: 0;
 	padding: 0 0 5px 0;
 	font-size: 12px;
@@ -44,6 +45,7 @@ h2, h3, h4 {
 
 h1 {
 	color: teal;
+   display: block;
    padding-bottom: 10px;
    padding-top: 10px;
    text-align: center;
