--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ToolBar.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ToolBar.css
@@ -12,8 +12,8 @@
    float:left;
    line-height:30px;
    list-style:none;
-   margin:0;
-   padding:0 10px 0 10px;
+   height: 30px;
+   margin-top: 4px;
    width:500px;	
 }
 
@@ -24,28 +24,67 @@
 
 #DocumentEditorToolBar a {
    float:left;
-   text-decoration:none;
+   padding-left: 3px;
+   padding-right: 2px;
+   text-decoration: none;
+   width:20px;
+   z-index: 10;
 }
 
-#DocumentEditorToolBar a span {
+#DocumentEditorToolBar a span.toolBarButton {
    display:block;
    float:none; 
-   padding-left: 5px;
-   padding-right: 5px;
 }
 
-#DocumentEditorToolBar a span img{
-   border:none;
-   float:left;
+#DocumentEditorToolBar a img{
+   border: none;
    position: relative;
-   top: 6px;
+   top: 0px;
 }
+
+* html a:hover { background: transparent; }
 
 #DocumentEditorToolBar a:hover {
    background: url(../Images/ToolBarButtonBackground-Left.png) no-repeat left center;
+   background-position: left top;
    color: white;
 }
 
-#DocumentEditorToolBar a:hover span {
+#DocumentEditorToolBar a:hover span.toolBarButton {
    background:url(../Images/ToolBarButtonBackground-Right.png) no-repeat right center;
+   background-position: top right;
+}
+
+#DocumentEditorToolBar a span.toolBarToolTip {
+   border-radius: 5px;
+   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+   cursor: help;
+   left: -100em;
+   margin-left: -99em;
+   opacity: 0;
+   padding: 5px;
+   position: relative;
+   text-decoration: none !important;
+   top: 0.5em;
+   width: 99em;
+   white-space:nowrap;
+   -moz-border-radius: 5px;
+   -webkit-border-radius: 5px;
+   -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+   -moz-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+   -moz-transition-property: opacity;
+   -moz-transition-duration: 1s;
+   -webkit-transition-property: opacity;
+   -webkit-transition-duration: 1s;
+   -o-transition-property: opacity;
+   -o-transition-duration: 1s;
+}
+
+
+#DocumentEditorToolBar a:hover span.toolBarToolTip {
+   font-family: Calibri, Tahoma, Geneva, sans-serif;
+   left: 0em;
+   margin-left: 0;
+   opacity: 1;
+   z-index: 99;
 }
