ToolBarWidget now handles separator items.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/ToolBarWidget/ToolBar.css
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/ToolBarWidget/ToolBar.css
@@ -23,6 +23,12 @@
 	padding: 0px;
 }
 
+#TestToolbar span.toolBarDivider{
+	display: inline;
+	float: left;
+	margin-right: 3px;
+}
+
 #TestToolbar a {
 	float: left;
 	padding-left: 3px;
