--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ConsoleTabs.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ConsoleTabs.css
@@ -3,7 +3,7 @@
 	background-color: transparent;
 	float: left;
    list-style: none;
-   margin: 0px;
+   margin-top: 4px;
 	overflow: hidden;
 	padding: 0px;
 }
