--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ToolBar.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ToolBar.css
@@ -13,6 +13,7 @@
    line-height:30px;
    list-style:none;
    height: 30px;
+   margin-left: 1px;
    margin-top: 4px;
    width:500px;	
 }
@@ -36,6 +37,12 @@
    float:none; 
 }
 
+#DocumentEditorToolBar span.toolBarDivider{
+   display: inline;
+   float: left;
+   margin-right: 3px;
+}
+
 #DocumentEditorToolBar a img{
    border: none;
    position: relative;
@@ -47,7 +54,7 @@
 #DocumentEditorToolBar a:hover {
    background: url(../Images/ToolBarButtonBackground-Left.png) no-repeat left center;
    background-position: left top;
-   color: white;
+   color: navy;
 }
 
 #DocumentEditorToolBar a:hover span.toolBarButton {
@@ -56,7 +63,8 @@
 }
 
 #DocumentEditorToolBar a span.toolBarToolTip {
-   border-radius: 5px;
+   background-color: #DCFCE6;
+	border-radius: 5px;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
    cursor: help;
    left: -100em;
@@ -65,9 +73,10 @@
    padding: 5px;
    position: relative;
    text-decoration: none !important;
-   top: 0.5em;
+   top: -3em;
    width: 99em;
    white-space:nowrap;
+   z-index: 10;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
@@ -83,8 +92,8 @@
 
 #DocumentEditorToolBar a:hover span.toolBarToolTip {
    font-family: Calibri, Tahoma, Geneva, sans-serif;
-   left: 0em;
+   left: 2em;
    margin-left: 0;
    opacity: 1;
-   z-index: 99;
+   z-index: 999;
 }
