--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ConsoleTabs.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ConsoleTabs.css
@@ -3,7 +3,8 @@
 	background-color: transparent;
 	float: left;
    list-style: none;
-   margin-top: 4px;
+   margin-left: 2px;
+   margin-top: 3px;
 	overflow: hidden;
 	padding: 0px;
 }
