ComplexContentBehaviour extracted from DesktopPanel.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/Skins/ProcessPuzzle/Styles/Window.css
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/Skins/ProcessPuzzle/Styles/Window.css
@@ -310,7 +310,8 @@ div.mochaToolbarWrapper.bottom {
 }
 
 .mocha.notification {
-	background: #cedff2;	
+	background: rgb(220,252,230);	
+   color: teal;
 }
 
 .mocha.notification .mochaTitlebar {
