--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Window.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Window.css
@@ -47,8 +47,7 @@ Required by:
 .mochaTitlebar {
 	width: 100%;
 	overflow: hidden;
-	background-image: url(../Images/PanelHeaderBackground.jpg);
-	background-repeat: repeat-x; 
+	background-image: url(../images/spacer.gif?from=fafafa&to=e5e5e5);
 }
 
 .mochaTitlebar h3 {
