Correct some flaws in tests.

--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Content.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Content.css
@@ -43,11 +43,11 @@ h2, h3, h4 {
 
 h1 {
 	text-align: center;
-	color: teal;
+	color: navy;
 }
 	
 h2 {
-	color: teal;
+	color: navy;
 	font-size: 14px;
 	font-weight: bold;
 	margin-top: 10px;
