--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Layout.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Layout.css
@@ -167,6 +167,11 @@ body {
 	background: url(../Images/VerticalMenuBackground.jpg) repeat-y;
 }
 
+#rightColumn {
+   overflow: hidden;
+   background-color: rgb(245,250,245);
+}
+
 /* Panels */
 
 .panel {
@@ -199,7 +204,7 @@ body {
 	position: relative;	
 	background: #f1f1f1 url(../Images/PanelHeaderBackground.jpg) repeat-x;
 	height: 30px;
-	overflow: hidden;
+	overflow: visible;
 	border-bottom: 1px solid #d3d3d3;		
 }
 
