--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Panels.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Panels.css
@@ -20,4 +20,4 @@ Required by:
 
 #documents-panel { overflow: hidden; }
 
-.panelDocumentWrapper { margin-left: 5px; margin-right: 5px; }
+.documentWrapper { margin-left: 5px; margin-right: 5px; padding : 2px; }
