--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Panels.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Panels.css
@@ -21,3 +21,9 @@ Required by:
 #documents-panel {
 	overflow: hidden;
 }
+
+.documentWrapper { 
+	margin-left: 5px; 
+	margin-right: 5px; 
+	padding : 2px; 
+}
