--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Panels.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Panels.css
@@ -18,6 +18,22 @@ Required by:
 
 
 
-#documents-panel { overflow: hidden; }
+#documents-panel { 
+	overflow: hidden; 
+}
 
-.documentWrapper { margin-left: 5px; margin-right: 5px; padding : 2px; }
+.documentWrapper { 
+	background: transparent;
+	margin-left: 5px; 
+	margin-right: 5px; 
+	padding : 2px; 
+}
+
+.mooeditable-container { 
+   background: transparent;
+}
+
+.mooeditable-iframe { 
+   background: transparent;
+}
+
