Cease overflow of panel toolbar and reposition tooltip.

--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
@@ -92,6 +92,12 @@ p {
 
 /* Lists */
 
+ol {
+   list-style: outside;
+   margin: 0 0 9px 16px;
+   list-style-type: decimal;
+}
+
 ul {
 	list-style: outside;
 	margin: 0 0 9px 16px;
