Add .formBoxLeft and .formBoxRight styles.

--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Content.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Content.css
@@ -165,6 +165,18 @@ form button {
 	padding: 3px 1px;		
 }
 
+.floatBoxLeft {
+   float: left;;
+   margin: 5px;
+   border: 1px;
+}
+
+.floatBoxRight {
+   float: right;
+   margin: 5px;
+   border: 1px;
+}
+
 .searchField {
 	width: 150px;
 	overflow: hidden;
