Change comment in Content.css

--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/Content.css
@@ -1,18 +1,16 @@
 @CHARSET "UTF-8";
 /*
-
-CSS for Mocha UI
+CSS for ProcessPuzzle UI
 
 Theme: Default
 
 Copyright:
-	Copyright (c) 2007-2009 Greg Houston, <http://greghoustondesign.com/>.
+   Copyright (c) 2005-2012 IT Codex Llc., <http://itkodex.hu/>.
 
 License:
-	MIT-style license.
+   MIT-style license.
 
-Note:	
-	If you are adding MochaUI to an existing site, this CSS file may not be necessary.
+Note: 
 
 */
 
