--- a/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ScrollBar.css
+++ b/Implementation/WebTier/WebContent/Desktops/ProcessPuzzle/Styles/ScrollBar.css
@@ -5,7 +5,7 @@
 	right:-1px;
 	height:100%;
 	width:15px;
-	background: url(../Images/scrollBar.gif) no-repeat right top;
+	background: url(../Images/ScrollBar.gif) no-repeat right top;
 }
 
 .upBtn{
@@ -14,17 +14,17 @@
 	bottom:15px;
 	right:0;
 	width:15px;
-	height:26px;
-	background: url(../Images/upBtn.gif) no-repeat 0 0;
+	height:17px;
+	background: url(../Images/ScrollUpButton.gif) no-repeat 0 -34px;
 	cursor:pointer;
 }
 
 .upBtn:hover{
-	background: url(../Images/upBtn.gif) no-repeat 0 -26px;
+	background: url(../Images/ScrollUpButton.gif) no-repeat 0 -17px;
 }
 
 .upBtn-Active, .upBtn-Active:hover{
-	background: url(../Images/upBtn.gif) no-repeat 0 -52px;
+	background: url(../Images/ScrollUpButton.gif) no-repeat 0 0px;
 }
 
 .downBtn{
@@ -34,16 +34,16 @@
 	right:0;
 	width:15px;
 	height:15px;
-	background: url(../Images/downBtn.gif) no-repeat 0 -34px;
+	background: url(../Images/ScrollDownButton.gif) no-repeat 0 -34px;
 	cursor:pointer;
 }
 
 .downBtn:hover{
-	background: url(../Images/downBtn.gif) no-repeat 0 -17px;
+	background: url(../Images/ScrollDownButton.gif) no-repeat 0 -17px;
 }
 
 .downBtn-Active, .downBtn-Active:hover{
-	background: url(../Images/downBtn.gif) no-repeat 0 0;
+	background: url(../Images/ScrollDownButton.gif) no-repeat 0 0;
 }
 
 .scrollBar{
@@ -74,15 +74,15 @@
 	position: relative;
 	height:100%;
 	width:15px;
-	background: url(../Images/scrollHandleBG.gif) repeat-y 0 0 ;
+	background: url(../Images/ScrollHandleBackground.gif) repeat-y 0 0 ;
 }
 
 .scrollHandle .scrollHandleBG:hover, .scrollHandle:hover .scrollHandleBG{
-	background: url(../Images/scrollHandleBG.gif) repeat-y -15px 0;
+	background: url(../Images/ScrollHandleBackground.gif) repeat-y -15px 0;
 }
 
 .scrollHandle-Active .scrollHandleBG:hover, .scrollHandle-Active:hover .scrollHandleBG, .scrollHandle-Active .scrollHandleBG{
-	background: url(../Images/scrollHandleBG.gif) repeat-y -30px 0;
+	background: url(../Images/ScrollHandleBackground.gif) repeat-y -30px 0;
 }
 
 .scrollHandleMiddle{
@@ -90,17 +90,8 @@
 	position: absolute;
 	width:15px;
 	height:13px;
-	/*background: url(../Images/scrollHandleMiddle.gif) no-repeat 0 0  ;*/
 	top:50%;
 	margin:-5px 0 0 0;
-}
-
-.scrollHandle .scrollHandleMiddle:hover, .scrollHandle:hover .scrollHandleMiddle{
-	/*background: url(../Images/scrollHandleMiddle.gif) repeat-y -15px 0;*/
-}
-
-.scrollHandle-Active .scrollHandleMiddle:hover, .scrollHandle-Active:hover .scrollHandleMiddle, .scrollHandle-Active .scrollHandleMiddle{
-	/*background: url(../Images/scrollHandleMiddle.gif) repeat-y -30px 0;*/
 }
 
 .scrollHandleTop{
@@ -108,17 +99,17 @@
 	position:absolute;
 	width:15px;
 	height:11px;
-	background: url(../Images/scrollHandleTop.png) no-repeat 0 0;
+	background: url(../Images/ScrollHandleTop.gif) no-repeat 0 0;
 	top:2px;
 	margin:0 0 0 0;
 }
 
 .scrollHandle .scrollHandleTop:hover, .scrollHandle:hover .scrollHandleTop{
-	background: url(../Images/scrollHandleTop.png) no-repeat -15px 0;
+	background: url(../Images/ScrollHandleTop.gif) no-repeat -15px 0;
 }
 
 .scrollHandle-Active .scrollHandleTop:hover, .scrollHandle-Active:hover .scrollHandleTop, .scrollHandle-Active .scrollHandleTop{
-	background: url(../Images/scrollHandleTop.png) no-repeat -30px 0;
+	background: url(../Images/ScrollHandleTop.gif) no-repeat -30px 0;
 }
 
 .scrollHandleBottom{
@@ -126,15 +117,15 @@
 	position:absolute;
 	width:15px;
 	height:11px;
-	background: url(../Images/scrollHandleBottom.png) no-repeat -30px 0 ;
+	background: url(../Images/ScrollHandleBottom.gif) no-repeat 0px 0px ;
 	bottom:0;
 	margin:0 0 0 0;
 }
 
 .scrollHandle .scrollHandleBottom:hover, .scrollHandle:hover .scrollHandleBottom{
-	background: url(../Images/scrollHandleBottom.png) no-repeat -15px 0;
+	background: url(../Images/ScrollHandleBottom.gif) no-repeat -15px 0;
 }
 
 .scrollHandle-Active .scrollHandleBottom:hover, .scrollHandle-Active:hover .scrollHandleBottom, .scrollHandle-Active .scrollHandleBottom{
-	background: url(../Images/scrollHandleBottom.png) no-repeat 0 0 ;
+	background: url(../Images/ScrollHandleBottom.gif) no-repeat 0 0 ;
 }
