Add scrolling behaviour to panels.

--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/ScrollBar.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/ScrollBar.css
@@ -5,26 +5,26 @@
    right:-1px;
    height:100%;
    width:15px;
-   background: url(../Images/ScrollBar.gif) no-repeat right top;
+   background: url(../Images/ScrollBar-Background.gif) no-repeat right top;
 }
 
 .upBtn{
+   background: url(../Images/ScrollUpButton.gif) no-repeat 0 0px;
+   bottom:17px;
+   cursor:pointer;
    display:block;
+   height:26px;
    position:absolute;
-   bottom:15px;
    right:0;
    width:15px;
-   height:17px;
-   background: url(../Images/ScrollUpButton.gif) no-repeat 0 -34px;
-   cursor:pointer;
 }
 
 .upBtn:hover{
-   background: url(../Images/ScrollUpButton.gif) no-repeat 0 -17px;
+   background: url(../Images/ScrollUpButton.gif) no-repeat 0 -26px;
 }
 
 .upBtn-Active, .upBtn-Active:hover{
-   background: url(../Images/ScrollUpButton.gif) no-repeat 0 0px;
+   background: url(../Images/ScrollUpButton.gif) no-repeat 0 -51px;
 }
 
 .downBtn{
@@ -33,7 +33,7 @@
    bottom:0;
    right:0;
    width:15px;
-   height:15px;
+   height:17px;
    background: url(../Images/ScrollDownButton.gif) no-repeat 0 -34px;
    cursor:pointer;
 }
@@ -46,35 +46,39 @@
    background: url(../Images/ScrollDownButton.gif) no-repeat 0 0;
 }
 
-.scrollBar{
+.scrollSlot{
    display:block;
+   margin-bottom: -20px;
+   padding-bottom: 0px;
+   padding-left: 0px;
+   padding-right: 0px;
+   padding-top: 0px;
    position: absolute;
-   top:-10px;
    right:0;
-   padding: 0 0 0 0; 
-   bottom:41px;
+   top:6px;
    width:15px;
 }
 
 .scrollHandle{
-   display:block;
-   position:absolute;
-   top:0px;
-   right:0;
-   width:15px;
-   height:35px;
-   min-height:4px;
    cursor: pointer;
-   padding:11px 0;
-   margin:13px 0 0 0;
+   display:block;
+   height:35px;
+   margin:0px 0 0 0;
+   min-height:4px;
+   padding:0px;
+   position:absolute;
+   right:0;
+   top:0px;
+   width:15px;
 }
 
 .scrollHandleBG{
-   display:block;
-   position: relative;
-   height:100%;
-   width:15px;
    background: url(../Images/ScrollHandleBackground.gif) repeat-y 0 0 ;
+   display:block;
+   height:100%;
+   position: relative;
+   top: 9px;
+   width:15px;
 }
 
 .scrollHandle .scrollHandleBG:hover, .scrollHandle:hover .scrollHandleBG{
@@ -95,13 +99,13 @@
 }
 
 .scrollHandleTop{
-   display:block;
-   position:absolute;
-   width:15px;
-   height:11px;
    background: url(../Images/ScrollHandleTop.gif) no-repeat 0 0;
-   top:2px;
+   display:block;
+   height:9px;
    margin:0 0 0 0;
+   position:absolute;
+   top:0px;
+   width:15px;
 }
 
 .scrollHandle .scrollHandleTop:hover, .scrollHandle:hover .scrollHandleTop{
@@ -113,13 +117,13 @@
 }
 
 .scrollHandleBottom{
-   display:block;
-   position:absolute;
-   width:15px;
-   height:11px;
    background: url(../Images/ScrollHandleBottom.gif) no-repeat 0px 0px ;
    bottom:0;
+   display:block;
+   height:9px;
    margin:0 0 0 0;
+   position:relative;
+   width:15px;
 }
 
 .scrollHandle .scrollHandleBottom:hover, .scrollHandle:hover .scrollHandleBottom{
