--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Content.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Content.css
@@ -43,6 +43,9 @@ h2, h3, h4 {
 
 h1 {
 	color: navy;
+	margin-bottom: 10px;
+	margin-top: 5px;
+	padding-bottom: 5px;
 	padding-top: 5px;
 	text-align: center;
 }
