--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/PhotoGaleryWidget/PhotoGalery.css
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/PhotoGaleryWidget/PhotoGalery.css
@@ -176,7 +176,7 @@ Notes:
 */
 
 .slideshow-loader {
-	background: url(Images/loader.png); height: 30px; right: 2px; position: absolute; top: 2px; width: 30px; z-index: 10001;
+	background: url(../PhotoGaleryWidget/Images/loader.png); height: 30px; right: 2px; position: absolute; top: 2px; width: 30px; z-index: 10001;
 }
 .slideshow-loader-hidden {
 	opacity: 0;
