--- a/Implementation/WebTier/.settings/org.eclipse.wst.common.component
+++ b/Implementation/WebTier/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="ProcessPuzzleUI - Web Tier">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/AcceptanceTests"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Source"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Configuration"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/ObjectTests"/>
         <property name="context-root" value="ProcessPuzzleUI"/>
         <property name="java-output-path" value="/ProcessPuzzleUI - Web Tier/Build/classes"/>
     </wb-module>
